--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@giphy/react-components": "^2.0.1",
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-typical": "^0.1.3",
+    "use-dencrypt-effect": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
