--- a/package.json
+++ b/package.json
@@ -2,22 +2,29 @@
   "name": "moandcourtsfoodpicker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mohaimenhasan.github.io/moandcourtsfoodpicker",
+
   "dependencies": {
+    "-": "0.0.1",
     "@giphy/react-components": "^2.0.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dimensions": "^1.3.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-typical": "^0.1.3",
+    "save-dev": "0.0.1-security",
     "use-dencrypt-effect": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
